# wmux

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  SETUP.md  actionfile.go  build-android.sh  build-rpm.sh  gen-cert.sh  go.mod  main.go  serve-https.py  setup-xpra-html5.sh  sync-icons.sh  wmux-multi@.service  wmux.spec  wmux@.service  xpra.go
public/: app.js  connect.html  connect.js  host-manager.html  host-manager.js  index.html  manifest.json  service-worker.js  spa-router.js  style.css
wmux-capacitor/: capacitor.config.json  package-lock.json  package.json  setup.sh
